update csrf token usage

--- a/modules/ui-module/src/main/ts/tsconfig.json
+++ b/modules/ui-module/src/main/ts/tsconfig.json
@@ -14,7 +14,7 @@
     "paths": {
       "@cms/modules/*": ["js/modules/*"],
       "@cms/libs/*": ["js/libs/*"],
-      "@cms/*": ["js/*"],
+      "@cms/js/*": ["js/*"],
     }
   },
   "include": [
